Add DELIVERABLES link to navbar

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <span class="nav-dot">&middot;</span>
             <a href="#partnership" class="nav-link">PARTNERSHIP</a>
             <span class="nav-dot">&middot;</span>
+            <a href="#deliverables" class="nav-link">DELIVERABLES</a>
+            <span class="nav-dot">&middot;</span>
             <a href="#contact" class="nav-link">CONTACT</a>
         </div>
     </nav>
