Update Instagram and LinkedIn links

--- a/index.html
+++ b/index.html
@@ -322,18 +322,20 @@
                 and long-term impact.
             </p>
             <div class="platform-icons reveal-up">
-                <div class="platform">
+                <a href="#" class="platform">
                     <div class="icon-circle"></div>
                     <div class="icon-label">WEBSITE</div>
-                </div>
-                <div class="platform">
+                </a>
+                <a href="https://www.instagram.com/jaihindbusiness.conclave?igsh=MXZwdzI5ZzVnb2JxYQ==" target="_blank"
+                    rel="noopener noreferrer" class="platform">
                     <div class="icon-circle"></div>
                     <div class="icon-label">INSTAGRAM</div>
-                </div>
-                <div class="platform">
+                </a>
+                <a href="https://www.linkedin.com/company/jai-hind-college-business-conclave/" target="_blank"
+                    rel="noopener noreferrer" class="platform">
                     <div class="icon-circle"></div>
                     <div class="icon-label">LINKEDIN</div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
