--- a/index.html
+++ b/index.html
@@ -324,7 +324,8 @@
                 and long-term impact.
             </p>
             <div class="platform-icons reveal-up">
-                <a href="#" class="platform">
+                <a href="https://www.jaihindbusinessconclave.com" target="_blank" rel="noopener noreferrer"
+                    class="platform">
                     <div class="icon-circle"></div>
                     <div class="icon-label">WEBSITE</div>
                 </a>
