Add Location section with Maps embed and responsive layout

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <span class="nav-dot">&middot;</span>
             <a href="#deliverables" class="nav-link">DELIVERABLES</a>
             <span class="nav-dot">&middot;</span>
+            <a href="#location" class="nav-link">LOCATION</a>
+            <span class="nav-dot">&middot;</span>
             <a href="#contact" class="nav-link">CONTACT</a>
         </div>
     </nav>
@@ -343,7 +345,61 @@
         </div>
     </section>
 
-    <!-- 8. CLOSING / CONTACT SECTION -->
+    <!-- 8. LOCATION SECTION -->
+    <section id="location" class="location alt-bg">
+        <div class="container">
+            <div class="section-label-group">
+                <div class="label-rule"></div>
+                <div class="section-label">FIND US</div>
+            </div>
+
+            <h2 class="section-heading mb-2 reveal-up">THE VENUE</h2>
+            <p class="section-body location-subtext reveal-up">Taj President, Cuffe Parade, Mumbai &mdash; 5th June 2026
+            </p>
+
+            <div class="location-divider reveal-up"></div>
+
+            <div class="location-grid">
+                <div class="location-details reveal-slide-left">
+                    <h3 class="venue-name">Taj President</h3>
+                    <p class="address-block">
+                        Taj President Hotel<br>
+                        90, Cuffe Parade<br>
+                        Colaba, Mumbai &mdash; 400005<br>
+                        Maharashtra, India
+                    </p>
+
+                    <div class="address-divider"></div>
+
+                    <div class="datetime-block">
+                        <div class="dt-row">
+                            <span class="dt-label">DATE</span>
+                            <span class="dt-value">5th June, 2026</span>
+                        </div>
+                        <div class="dt-row">
+                            <span class="dt-label">TIME</span>
+                            <span class="dt-value">10:00 AM &ndash; 5:00 PM</span>
+                        </div>
+                    </div>
+
+                    <a href="https://maps.google.com/?q=Taj+President+Hotel+Cuffe+Parade+Mumbai" target="_blank"
+                        rel="noopener noreferrer" class="btn-directions">GET DIRECTIONS &rarr;</a>
+                </div>
+
+                <div class="location-map reveal-slide-right">
+                    <div class="iframe-wrapper">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3774.1!2d72.8195!3d18.9067!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7d1c3b8b8b8b8%3A0x1234567890abcdef!2sTaj%20President%2C%20Mumbai!5e0!3m2!1sen!2sin!4v1234567890"
+                            width="100%" height="420" style="border: 1px solid #D8D4CF; display: block;"
+                            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 9. CLOSING / CONTACT SECTION -->
     <section id="contact" class="contact dark-bg">
         <div class="container text-center">
             <h2 class="closing-heading">
