Implement mobile hamburger navigation and global responsive layout adjustments

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             <span class="nav-dot">&middot;</span>
             <a href="#contact" class="nav-link">CONTACT</a>
         </div>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
     </nav>
 
     <!-- 1. HERO SECTION -->
