fix: rebuild JBC hero logo exactly to specification

--- a/index.html
+++ b/index.html
@@ -46,13 +46,9 @@
     <!-- 1. HERO SECTION -->
     <section id="hero" class="hero">
       <div class="hero-content">
-        <div class="hero-logo-container">
+        <div class="jbc-logo-wrapper">
           <div class="jbc-letters">JBC</div>
-          <div class="wordmark-strip">
-            <span class="wordmark-line">&mdash;&mdash;</span>
-            <span class="wordmark-text">JAI HIND BUSINESS CONCLAVE</span>
-            <span class="wordmark-line">&mdash;&mdash;</span>
-          </div>
+          <div class="jbc-wordmark">— JAI HIND BUSINESS CONCLAVE —</div>
         </div>
         <p class="hero-tagline">WHERE INDIA'S BUSINESS LEADERS ARE SHAPED</p>
       </div>
