feat: add persistent dark mode toggle and visionOS dark theme

--- a/index.html
+++ b/index.html
@@ -713,6 +713,11 @@
       </div>
     </section>
 
+    <!-- Dark Mode Toggle Button -->
+    <button id="theme-toggle" aria-label="Toggle dark mode">
+      <span class="toggle-icon">☽</span>
+    </button>
+
     <!-- Custom JS -->
     <script src="script.js"></script>
   </body>
