style: revert hero parallax and 3d layers back to original static logo

--- a/index.html
+++ b/index.html
@@ -126,23 +126,17 @@
 
     <!-- 1. HERO SECTION -->
     <section id="hero" class="hero">
-      <div class="hero-wrapper">
-        <div class="hero-layer layer-orbs"></div>
-        <!-- slowest: 0.1x scroll speed -->
-        <div class="hero-layer layer-letters">JBC</div>
-        <!-- slow: 0.3x scroll speed -->
-        <div class="hero-layer layer-wordmark">
-          — JAI HIND BUSINESS CONCLAVE —
+      <div class="hero-content">
+        <div class="jbc-logo-wrapper">
+          <div class="jbc-letters">JBC</div>
+          <h1 class="jbc-wordmark">— JAI HIND BUSINESS CONCLAVE —</h1>
         </div>
-        <!-- medium: 0.5x scroll speed -->
-        <div class="hero-layer layer-tagline">
-          <!-- faster: 0.7x scroll speed -->
-          <p class="hero-tagline">WHERE INDIA'S BUSINESS LEADERS ARE SHAPED</p>
-          <p class="hero-date">5TH JUNE 2026 &middot; TAJ PRESIDENT, MUMBAI</p>
-        </div>
-        <div class="hero-layer layer-scroll">
-          <!-- fastest: 1x scroll speed -->
-          <div class="scroll-indicator"></div>
+        <p class="hero-tagline">WHERE INDIA'S BUSINESS LEADERS ARE SHAPED</p>
+      </div>
+      <div class="hero-bottom">
+        <div class="hero-red-rule"></div>
+        <div class="hero-date-location">
+          5TH JUNE 2026 &middot; TAJ PRESIDENT, MUMBAI
         </div>
       </div>
     </section>
