feat: Update ROI Calculator to realistic college scale numbers

--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
           <div class="roi-slider-block">
             <label class="roi-slider-label">
               Target Campus Reach
-              <span class="roi-slider-value" id="campusValue">25 Colleges</span>
+              <span class="roi-slider-value" id="campusValue">10 Colleges</span>
             </label>
-            <input type="range" id="campusSlider" min="10" max="75" value="25" step="5" class="roi-slider" />
+            <input type="range" id="campusSlider" min="5" max="15" value="10" step="1" class="roi-slider" />
             <div class="roi-slider-track-labels">
-              <span>10 Colleges</span>
-              <span>75 Colleges</span>
+              <span>5 Colleges</span>
+              <span>15 Colleges</span>
             </div>
           </div>
 
@@ -250,24 +250,32 @@
             <div class="roi-result-card">
               <div class="roi-result-number" id="res-students">0</div>
               <div class="roi-result-label">STUDENT TOUCHPOINTS</div>
+              <div class="roi-result-sub">Attendees at the conclave</div>
             </div>
             <div class="roi-result-card">
               <div class="roi-result-number" id="res-impressions">0</div>
-              <div class="roi-result-label">ESTIMATED IMPRESSIONS</div>
+              <div class="roi-result-label">NETWORK IMPRESSIONS</div>
+              <div class="roi-result-sub">Via peer & social reach</div>
+            </div>
+            <div class="roi-result-card">
+              <div class="roi-result-number" id="res-posts">0</div>
+              <div class="roi-result-label">SOCIAL POSTS</div>
+              <div class="roi-result-sub">Reels, stories & feed posts</div>
             </div>
             <div class="roi-result-card">
               <div class="roi-result-number" id="res-media">0</div>
               <div class="roi-result-label">MEDIA MENTIONS</div>
-            </div>
-            <div class="roi-result-card">
-              <div class="roi-result-number" id="res-digital">0</div>
-              <div class="roi-result-label">DIGITAL POSTS</div>
+              <div class="roi-result-sub">Articles & press coverage</div>
             </div>
           </div>
 
           <!-- CTA BELOW RESULTS -->
           <div class="roi-cta-row">
-            <p class="roi-disclaimer">*Projections are estimates based on platform reach and past edition data.</p>
+            <p class="roi-disclaimer">
+              *Projections based on 150 shortlisted students across 15 colleges.
+              Social posts include Instagram reels, stories, and feed posts by the JBC handle.
+              Media mentions subject to confirmed press partnerships.
+            </p>
             <a href="mailto:jaihindbusinessconclave25@gmail.com" class="roi-cta-btn">
               LOCK THIS TIER &rarr;
             </a>
